--- a/package.json
+++ b/package.json
@@ -2,16 +2,11 @@
   "name": "clicktime_app",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "yarn clean; webpack --config config/webpack-prod-config.js",
+    "clean": "rm -rf build/*",
+    "start:dev": "node config/webpack-dev-server.js",
+    "start:prod": "yarn build; serve build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +22,37 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.3",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^4.2.0",
+    "fontface-loader": "0.0.8",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "path": "^0.12.7",
+    "react-hot-loader": "^4.12.15",
+    "sass-loader": "^8.0.0",
+    "ttf-loader": "^1.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.41.0",
+    "webpack-command": "^0.5.0",
+    "webpack-dev-server": "^3.8.2",
+    "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.6",
+    "fs": "0.0.1-security",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts": "3.2.0",
+    "react-simple-maps": "^1.0.0-beta.0"
   }
 }
